--- a/archives/toutiao-search/2023-11-20.md
+++ b/archives/toutiao-search/2023-11-20.md
@@ -1,59 +1,81 @@
 # 2023-11-20
 
-共 333 条
+共 350 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 20 2023 19:00:39 GMT+0800 (China Standard Time) -->
-1. [阿根廷“特朗普”当选是拉美大乱征兆吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选是拉美大乱征兆吗)
-1. [香港535名拒宣誓政府雇员已离职](https://so.toutiao.com/search?keyword=香港535名拒宣誓政府雇员已离职)
-1. [中国电商助力非洲民众奔向美好生活](https://so.toutiao.com/search?keyword=中国电商助力非洲民众奔向美好生活)
-1. [专家解读人民币连续暴力拉升](https://so.toutiao.com/search?keyword=专家解读人民币连续暴力拉升)
-1. [水庆霞卸任中国女足主帅](https://so.toutiao.com/search?keyword=水庆霞卸任中国女足主帅)
-1. [哈维尔·米莱当选阿根廷新一任总统](https://so.toutiao.com/search?keyword=哈维尔·米莱当选阿根廷新一任总统)
-1. [澳方称中国军舰声呐伤人 中方回应](https://so.toutiao.com/search?keyword=澳方称中国军舰声呐伤人+中方回应)
-1. [研究：人类最佳睡眠时长竟不是8小时](https://so.toutiao.com/search?keyword=研究：人类最佳睡眠时长竟不是8小时)
-1. [特朗普祝贺“阿根廷特朗普”当选总统](https://so.toutiao.com/search?keyword=特朗普祝贺“阿根廷特朗普”当选总统)
-1. [广西多地飞鸟盘旋是地震前兆？假的](https://so.toutiao.com/search?keyword=广西多地飞鸟盘旋是地震前兆？假的)
-1. [乌尔善取关封神所有演员](https://so.toutiao.com/search?keyword=乌尔善取关封神所有演员)
+<!-- 最后更新时间 Mon Nov 20 2023 20:09:27 GMT+0800 (China Standard Time) -->
 1. [副部级官员降为科员9年后二次被查](https://so.toutiao.com/search?keyword=副部级官员降为科员9年后二次被查)
+1. [研究：人类最佳睡眠时长竟不是8小时](https://so.toutiao.com/search?keyword=研究：人类最佳睡眠时长竟不是8小时)
+1. [中国电商助力非洲民众奔向美好生活](https://so.toutiao.com/search?keyword=中国电商助力非洲民众奔向美好生活)
+1. [阿根廷不会加入金砖国家？中方回应](https://so.toutiao.com/search?keyword=阿根廷不会加入金砖国家？中方回应)
+1. [香港535名拒宣誓政府雇员已离职](https://so.toutiao.com/search?keyword=香港535名拒宣誓政府雇员已离职)
+1. [哈维尔·米莱当选阿根廷新一任总统](https://so.toutiao.com/search?keyword=哈维尔·米莱当选阿根廷新一任总统)
+1. [药物养殖的罗氏虾是狠科技吗](https://so.toutiao.com/search?keyword=药物养殖的罗氏虾是狠科技吗)
+1. [寒潮黄色预警：内蒙古等地降12-16℃](https://so.toutiao.com/search?keyword=寒潮黄色预警：内蒙古等地降12-16℃)
+1. [朝鲜导弹技术取得重大突破](https://so.toutiao.com/search?keyword=朝鲜导弹技术取得重大突破)
+1. [广西多地飞鸟盘旋是地震前兆？假的](https://so.toutiao.com/search?keyword=广西多地飞鸟盘旋是地震前兆？假的)
+1. [河南省通信局将约谈周口联通](https://so.toutiao.com/search?keyword=河南省通信局将约谈周口联通)
+1. [32个月女童疑注射阿奇霉素后死亡](https://so.toutiao.com/search?keyword=32个月女童疑注射阿奇霉素后死亡)
+1. [24岁演员吴迪飞宣布退圈](https://so.toutiao.com/search?keyword=24岁演员吴迪飞宣布退圈)
+1. [27岁小伙到上海求职在公园住帐篷](https://so.toutiao.com/search?keyword=27岁小伙到上海求职在公园住帐篷)
+1. [内蒙古一地审计报告难产拖欠工程款](https://so.toutiao.com/search?keyword=内蒙古一地审计报告难产拖欠工程款)
+1. [中方谈韩总统涉华言论：别指手画脚](https://so.toutiao.com/search?keyword=中方谈韩总统涉华言论：别指手画脚)
+1. [乌尔善取关封神所有演员](https://so.toutiao.com/search?keyword=乌尔善取关封神所有演员)
+1. [美批准对日出售战斧导弹 中方回应](https://so.toutiao.com/search?keyword=美批准对日出售战斧导弹+中方回应)
+1. [“奶奶辈儿”的爱好走进年轻人的心](https://so.toutiao.com/search?keyword=“奶奶辈儿”的爱好走进年轻人的心)
+1. [扬科维奇：中韩大战是焦点对决](https://so.toutiao.com/search?keyword=扬科维奇：中韩大战是焦点对决)
+1. [河南联通回应强迫用户更换光猫](https://so.toutiao.com/search?keyword=河南联通回应强迫用户更换光猫)
+1. [女子疑坠楼身亡：孩子刚出生不久](https://so.toutiao.com/search?keyword=女子疑坠楼身亡：孩子刚出生不久)
+1. [阿根廷“特朗普”当选是拉美大乱征兆吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选是拉美大乱征兆吗)
+1. [曝华为开源鸿蒙PC系统明年基本完善](https://so.toutiao.com/search?keyword=曝华为开源鸿蒙PC系统明年基本完善)
+1. [黑龙江一平房发生火灾致7人遇难](https://so.toutiao.com/search?keyword=黑龙江一平房发生火灾致7人遇难)
+1. [专家解读人民币连续暴力拉升](https://so.toutiao.com/search?keyword=专家解读人民币连续暴力拉升)
+1. [嘉兴学院拟更名为嘉兴大学](https://so.toutiao.com/search?keyword=嘉兴学院拟更名为嘉兴大学)
+1. [网友称全家退休金加10亩地年入4万](https://so.toutiao.com/search?keyword=网友称全家退休金加10亩地年入4万)
 1. [专家：人民币或将进入正式升值通道](https://so.toutiao.com/search?keyword=专家：人民币或将进入正式升值通道)
+1. [媒体评父亲家长会上坦言儿子是学渣](https://so.toutiao.com/search?keyword=媒体评父亲家长会上坦言儿子是学渣)
+1. [寿衣店开在小区外遭业主反对](https://so.toutiao.com/search?keyword=寿衣店开在小区外遭业主反对)
+1. [胡锡进谈王自如奉承董明珠事件](https://so.toutiao.com/search?keyword=胡锡进谈王自如奉承董明珠事件)
+1. [马斯克回应ChatGPT之父被开除](https://so.toutiao.com/search?keyword=马斯克回应ChatGPT之父被开除)
+1. [南宁“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=南宁“桂花牌”手表突然爆火)
+1. [两岁萌娃和大爷对打乒乓球](https://so.toutiao.com/search?keyword=两岁萌娃和大爷对打乒乓球)
+1. [法院判决葛斯齐赔偿大小S台币60万](https://so.toutiao.com/search?keyword=法院判决葛斯齐赔偿大小S台币60万)
+1. [邱毅：蓝白合成局机会仍很大](https://so.toutiao.com/search?keyword=邱毅：蓝白合成局机会仍很大)
+1. [小朋友跳“科目三” 网友：C位请单飞](https://so.toutiao.com/search?keyword=小朋友跳“科目三”+网友：C位请单飞)
+1. [白岩松谈四川一地规定不叠被子罚款](https://so.toutiao.com/search?keyword=白岩松谈四川一地规定不叠被子罚款)
+1. [雷军点名小米品牌安全处理刻意抹黑](https://so.toutiao.com/search?keyword=雷军点名小米品牌安全处理刻意抹黑)
+1. [中韩对战在即孙兴慜训练状态引关注](https://so.toutiao.com/search?keyword=中韩对战在即孙兴慜训练状态引关注)
+1. [鸿蒙系统明年或不兼容安卓](https://so.toutiao.com/search?keyword=鸿蒙系统明年或不兼容安卓)
+1. [男乘客拍打女列车员臀部被拘10日](https://so.toutiao.com/search?keyword=男乘客拍打女列车员臀部被拘10日)
+1. [学校保卫科长醉驾致母女1死2重伤](https://so.toutiao.com/search?keyword=学校保卫科长醉驾致母女1死2重伤)
+1. [中美旧金山峰会给世界带来什么启示](https://so.toutiao.com/search?keyword=中美旧金山峰会给世界带来什么启示)
+1. [万事达公司获批进入我国市场](https://so.toutiao.com/search?keyword=万事达公司获批进入我国市场)
+1. [澳大利亚碰瓷中国海军声呐有何图谋](https://so.toutiao.com/search?keyword=澳大利亚碰瓷中国海军声呐有何图谋)
+1. [养儿五年发现非亲生 女方称不知情](https://so.toutiao.com/search?keyword=养儿五年发现非亲生+女方称不知情)
+1. [教育部拟同意设置5所本科高等学校](https://so.toutiao.com/search?keyword=教育部拟同意设置5所本科高等学校)
+1. [克林斯曼：没收到中国足协执教邀约](https://so.toutiao.com/search?keyword=克林斯曼：没收到中国足协执教邀约)
+1. [水庆霞卸任中国女足主帅](https://so.toutiao.com/search?keyword=水庆霞卸任中国女足主帅)
+1. [澳方称中国军舰声呐伤人 中方回应](https://so.toutiao.com/search?keyword=澳方称中国军舰声呐伤人+中方回应)
+1. [特朗普祝贺“阿根廷特朗普”当选总统](https://so.toutiao.com/search?keyword=特朗普祝贺“阿根廷特朗普”当选总统)
 1. [韩媒：国足防守粗糙犯规多](https://so.toutiao.com/search?keyword=韩媒：国足防守粗糙犯规多)
 1. [媒体：2024对决特朗普 拜登危矣](https://so.toutiao.com/search?keyword=媒体：2024对决特朗普+拜登危矣)
-1. [河南联通回应强迫用户更换光猫](https://so.toutiao.com/search?keyword=河南联通回应强迫用户更换光猫)
-1. [中方谈韩总统涉华言论：别指手画脚](https://so.toutiao.com/search?keyword=中方谈韩总统涉华言论：别指手画脚)
-1. [药物养殖的罗氏虾是狠科技吗](https://so.toutiao.com/search?keyword=药物养殖的罗氏虾是狠科技吗)
-1. [阿根廷不会加入金砖国家？中方回应](https://so.toutiao.com/search?keyword=阿根廷不会加入金砖国家？中方回应)
-1. [教育部拟同意设置5所本科高等学校](https://so.toutiao.com/search?keyword=教育部拟同意设置5所本科高等学校)
-1. [朝鲜导弹技术取得重大突破](https://so.toutiao.com/search?keyword=朝鲜导弹技术取得重大突破)
-1. [南宁“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=南宁“桂花牌”手表突然爆火)
-1. [鸿蒙系统明年或不兼容安卓](https://so.toutiao.com/search?keyword=鸿蒙系统明年或不兼容安卓)
-1. [女子疑坠楼身亡：孩子刚出生不久](https://so.toutiao.com/search?keyword=女子疑坠楼身亡：孩子刚出生不久)
-1. [白岩松谈四川一地规定不叠被子罚款](https://so.toutiao.com/search?keyword=白岩松谈四川一地规定不叠被子罚款)
 1. [男子长期健身后食用蛋白粉查出肾虚](https://so.toutiao.com/search?keyword=男子长期健身后食用蛋白粉查出肾虚)
-1. [美批准对日出售战斧导弹 中方回应](https://so.toutiao.com/search?keyword=美批准对日出售战斧导弹+中方回应)
-1. [胡锡进谈王自如奉承董明珠事件](https://so.toutiao.com/search?keyword=胡锡进谈王自如奉承董明珠事件)
 1. [《似火流年》彪子开启监狱副本](https://so.toutiao.com/search?keyword=《似火流年》彪子开启监狱副本)
-1. [24岁演员吴迪飞宣布退圈](https://so.toutiao.com/search?keyword=24岁演员吴迪飞宣布退圈)
 1. [扬科维奇：希望球队对得起国民期待](https://so.toutiao.com/search?keyword=扬科维奇：希望球队对得起国民期待)
-1. [澳大利亚碰瓷中国海军声呐有何图谋](https://so.toutiao.com/search?keyword=澳大利亚碰瓷中国海军声呐有何图谋)
 1. [外交部谴责针对平民儿童的暴力袭击](https://so.toutiao.com/search?keyword=外交部谴责针对平民儿童的暴力袭击)
 1. [扬科维奇赛前：不光要防守孙兴慜](https://so.toutiao.com/search?keyword=扬科维奇赛前：不光要防守孙兴慜)
 1. [男子1万元私房钱被盗](https://so.toutiao.com/search?keyword=男子1万元私房钱被盗)
 1. [水庆霞卸任后寄语女足](https://so.toutiao.com/search?keyword=水庆霞卸任后寄语女足)
 1. [杜兰特、马尔卡宁对飚高分赛后拥抱](https://so.toutiao.com/search?keyword=杜兰特、马尔卡宁对飚高分赛后拥抱)
-1. [邱毅：蓝白合成局机会仍很大](https://so.toutiao.com/search?keyword=邱毅：蓝白合成局机会仍很大)
 1. [云南对缅甸果敢发故障停电通知](https://so.toutiao.com/search?keyword=云南对缅甸果敢发故障停电通知)
 1. [奥特曼回应加入微软：任务仍在继续](https://so.toutiao.com/search?keyword=奥特曼回应加入微软：任务仍在继续)
-1. [小朋友跳“科目三” 网友：C位请单飞](https://so.toutiao.com/search?keyword=小朋友跳“科目三”+网友：C位请单飞)
 1. [呼吸道传染病交织 抗生素被滥用了吗](https://so.toutiao.com/search?keyword=呼吸道传染病交织+抗生素被滥用了吗)
-1. [两岁萌娃和大爷对打乒乓球](https://so.toutiao.com/search?keyword=两岁萌娃和大爷对打乒乓球)
 1. [詹姆斯浓眉里夫斯三人合计41投30中](https://so.toutiao.com/search?keyword=詹姆斯浓眉里夫斯三人合计41投30中)
 1. [明星为电诈家族站台庆生违法吗](https://so.toutiao.com/search?keyword=明星为电诈家族站台庆生违法吗)
 1. [碧桂园地产新增被执行人信息](https://so.toutiao.com/search?keyword=碧桂园地产新增被执行人信息)
 1. [李佳航恭喜T1夺冠](https://so.toutiao.com/search?keyword=李佳航恭喜T1夺冠)
 1. [汤普森六连败期间命中率仅31%](https://so.toutiao.com/search?keyword=汤普森六连败期间命中率仅31%)
 1. [《我本是高山》首轮口碑](https://so.toutiao.com/search?keyword=《我本是高山》首轮口碑)
-1. [男乘客拍打女列车员臀部被拘10日](https://so.toutiao.com/search?keyword=男乘客拍打女列车员臀部被拘10日)
 1. [OpenAI创始人奥特曼加入微软](https://so.toutiao.com/search?keyword=OpenAI创始人奥特曼加入微软)
 1. [警方辟谣“青岛出现打人事件”](https://so.toutiao.com/search?keyword=警方辟谣“青岛出现打人事件”)
 1. [巴以冲突已致双方超1.44万人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超1.44万人死亡)
@@ -78,24 +100,20 @@
 1. [新型储能开启黄金赛道](https://so.toutiao.com/search?keyword=新型储能开启黄金赛道)
 1. [甘肃：39岁许伟民拟任县委书记](https://so.toutiao.com/search?keyword=甘肃：39岁许伟民拟任县委书记)
 1. [网友归还卖柿子老人误压纸箱200元](https://so.toutiao.com/search?keyword=网友归还卖柿子老人误压纸箱200元)
-1. [养儿五年发现非亲生 女方称不知情](https://so.toutiao.com/search?keyword=养儿五年发现非亲生+女方称不知情)
 1. [美国新一批军援抵台：含1000挺机枪](https://so.toutiao.com/search?keyword=美国新一批军援抵台：含1000挺机枪)
 1. [加沙南部医院运转困难孕妇面临威胁](https://so.toutiao.com/search?keyword=加沙南部医院运转困难孕妇面临威胁)
 1. [斯诺克：中国球手接连打出147](https://so.toutiao.com/search?keyword=斯诺克：中国球手接连打出147)
 1. [80后男子选择躺平：存款75万三套房](https://so.toutiao.com/search?keyword=80后男子选择躺平：存款75万三套房)
 1. [媒体人热议水庆霞离任](https://so.toutiao.com/search?keyword=媒体人热议水庆霞离任)
 1. [乌拉圭总统抵达北京 卫兵列队敬礼](https://so.toutiao.com/search?keyword=乌拉圭总统抵达北京+卫兵列队敬礼)
-1. [河南省通信局将约谈周口联通](https://so.toutiao.com/search?keyword=河南省通信局将约谈周口联通)
 1. [哥哥被拐34年终于回家见到弟弟](https://so.toutiao.com/search?keyword=哥哥被拐34年终于回家见到弟弟)
 1. [胡锡进谈《我本是高山》争议](https://so.toutiao.com/search?keyword=胡锡进谈《我本是高山》争议)
-1. [网友称全家退休金加10亩地年入4万](https://so.toutiao.com/search?keyword=网友称全家退休金加10亩地年入4万)
 1. [以军称哈马斯将人质转移至希法医院](https://so.toutiao.com/search?keyword=以军称哈马斯将人质转移至希法医院)
 1. [在家自测血糖需要注意什么](https://so.toutiao.com/search?keyword=在家自测血糖需要注意什么)
 1. [多地叫停“安全教育平台”强制打卡](https://so.toutiao.com/search?keyword=多地叫停“安全教育平台”强制打卡)
 1. [恒大地产新增18条被执行人信息](https://so.toutiao.com/search?keyword=恒大地产新增18条被执行人信息)
 1. [中纪委曝光：层层失守的把关](https://so.toutiao.com/search?keyword=中纪委曝光：层层失守的把关)
 1. [于蕾再度拟任央视春晚总导演](https://so.toutiao.com/search?keyword=于蕾再度拟任央视春晚总导演)
-1. [32个月女童疑注射阿奇霉素后死亡](https://so.toutiao.com/search?keyword=32个月女童疑注射阿奇霉素后死亡)
 1. [有气象记录以来最热暖季纪录被刷新](https://so.toutiao.com/search?keyword=有气象记录以来最热暖季纪录被刷新)
 1. [媒体：文艺批评不是偏执的谩骂](https://so.toutiao.com/search?keyword=媒体：文艺批评不是偏执的谩骂)
 1. [闫妮吴京存金条为谭松韵攒嫁妆](https://so.toutiao.com/search?keyword=闫妮吴京存金条为谭松韵攒嫁妆)
@@ -310,7 +328,6 @@
 1. [雷霆目前西部第四 未来7年36个签](https://so.toutiao.com/search?keyword=雷霆目前西部第四+未来7年36个签)
 1. [男子钱塘江边撒网捕鱼被卷走](https://so.toutiao.com/search?keyword=男子钱塘江边撒网捕鱼被卷走)
 1. [俄方称在莫斯科州摧毁一架乌无人机](https://so.toutiao.com/search?keyword=俄方称在莫斯科州摧毁一架乌无人机)
-1. [万事达公司获批进入我国市场](https://so.toutiao.com/search?keyword=万事达公司获批进入我国市场)
 1. [欧文：末节我们常失去防守位置](https://so.toutiao.com/search?keyword=欧文：末节我们常失去防守位置)
 1. [监管再次强调支持房企合理融资](https://so.toutiao.com/search?keyword=监管再次强调支持房企合理融资)
 1. [《地心引力》：用技术引领艺术](https://so.toutiao.com/search?keyword=《地心引力》：用技术引领艺术)
