--- a/archives/zhihu-search/2023-11-20.md
+++ b/archives/zhihu-search/2023-11-20.md
@@ -1,19 +1,21 @@
 # 2023-11-20
 
-共 19 条
+共 20 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Nov 20 2023 19:00:39 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 20 2023 20:09:27 GMT+0800 (China Standard Time) -->
 1. [法考备考攻略](https://www.zhihu.com/search?q=法考备考攻略)
 1. [考研政治](https://www.zhihu.com/search?q=考研政治)
 1. [考研数学](https://www.zhihu.com/search?q=考研数学)
 1. [考研英语](https://www.zhihu.com/search?q=考研英语)
 1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
-1. [西班牙vs格鲁吉亚全场数据](https://www.zhihu.com/search?q=西班牙vs格鲁吉亚全场数据)
+1. [人形机器人成为智能家中枢](https://www.zhihu.com/search?q=人形机器人成为智能家中枢)
 1. [考研需要买平板吗](https://www.zhihu.com/search?q=考研需要买平板吗)
-1. [体验一下哈尼村寨长街宴](https://www.zhihu.com/search?q=体验一下哈尼村寨长街宴)
 1. [30岁考公来得及吗](https://www.zhihu.com/search?q=30岁考公来得及吗)
 1. [法考主观题如何答题](https://www.zhihu.com/search?q=法考主观题如何答题)
+1. [法考主观题答题技巧](https://www.zhihu.com/search?q=法考主观题答题技巧)
+1. [西班牙vs格鲁吉亚全场数据](https://www.zhihu.com/search?q=西班牙vs格鲁吉亚全场数据)
+1. [体验一下哈尼村寨长街宴](https://www.zhihu.com/search?q=体验一下哈尼村寨长街宴)
 1. [国考北京考区考点安排](https://www.zhihu.com/search?q=国考北京考区考点安排)
 1. [北京国考考场分布](https://www.zhihu.com/search?q=北京国考考场分布)
 1. [鲁迅长孙周令飞谈ai写作](https://www.zhihu.com/search?q=鲁迅长孙周令飞谈ai写作)
@@ -21,6 +23,5 @@
 1. [碎纸机是干嘛用的](https://www.zhihu.com/search?q=碎纸机是干嘛用的)
 1. [为啥华为手机价格降不下来](https://www.zhihu.com/search?q=为啥华为手机价格降不下来)
 1. [懂显卡的人都选了什么显卡](https://www.zhihu.com/search?q=懂显卡的人都选了什么显卡)
-1. [法考主观题答题技巧](https://www.zhihu.com/search?q=法考主观题答题技巧)
 1. [法考主观题冲刺](https://www.zhihu.com/search?q=法考主观题冲刺)
 <!-- END ZHIHUSEARCH -->
