--- a/archives/toutiao-search/2023-11-20.md
+++ b/archives/toutiao-search/2023-11-20.md
@@ -1,49 +1,70 @@
 # 2023-11-20
 
-共 386 条
+共 399 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 20 2023 22:00:38 GMT+0800 (China Standard Time) -->
-1. [香港535名拒宣誓政府雇员已离职](https://so.toutiao.com/search?keyword=香港535名拒宣誓政府雇员已离职)
-1. [研究：人类最佳睡眠时长竟不是8小时](https://so.toutiao.com/search?keyword=研究：人类最佳睡眠时长竟不是8小时)
+<!-- 最后更新时间 Mon Nov 20 2023 23:00:45 GMT+0800 (China Standard Time) -->
+1. [巴西总统卢拉：祝阿根廷新政府好运](https://so.toutiao.com/search?keyword=巴西总统卢拉：祝阿根廷新政府好运)
+1. [阿根廷全面美元化会发生什么](https://so.toutiao.com/search?keyword=阿根廷全面美元化会发生什么)
 1. [外资机构为中国经济投出信任票](https://so.toutiao.com/search?keyword=外资机构为中国经济投出信任票)
+1. [香港535名拒宣誓政府雇员已离职](https://so.toutiao.com/search?keyword=香港535名拒宣誓政府雇员已离职)
 1. [南宁“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=南宁“桂花牌”手表突然爆火)
-1. [专家解读人民币连续暴力拉升](https://so.toutiao.com/search?keyword=专家解读人民币连续暴力拉升)
 1. [澳护卫舰在东海活动 解放军跟踪监视](https://so.toutiao.com/search?keyword=澳护卫舰在东海活动+解放军跟踪监视)
-1. [副部级官员降为科员9年后二次被查](https://so.toutiao.com/search?keyword=副部级官员降为科员9年后二次被查)
-1. [李强已任中央金融委员会主任](https://so.toutiao.com/search?keyword=李强已任中央金融委员会主任)
-1. [药物养殖的罗氏虾是狠科技吗](https://so.toutiao.com/search?keyword=药物养殖的罗氏虾是狠科技吗)
-1. [广西多地飞鸟盘旋是地震前兆？假的](https://so.toutiao.com/search?keyword=广西多地飞鸟盘旋是地震前兆？假的)
-1. [电瓶车停在黑车后面被车主一脚踹开](https://so.toutiao.com/search?keyword=电瓶车停在黑车后面被车主一脚踹开)
-1. [明天大A能向上突破吗](https://so.toutiao.com/search?keyword=明天大A能向上突破吗)
-1. [女记者采访竟遭电话轰炸和辱骂威胁](https://so.toutiao.com/search?keyword=女记者采访竟遭电话轰炸和辱骂威胁)
-1. [乌尔善取关封神所有演员](https://so.toutiao.com/search?keyword=乌尔善取关封神所有演员)
-1. [人民币成为全球第二大贸易融资货币](https://so.toutiao.com/search?keyword=人民币成为全球第二大贸易融资货币)
-1. [中方谈韩总统涉华言论：别指手画脚](https://so.toutiao.com/search?keyword=中方谈韩总统涉华言论：别指手画脚)
-1. [A股反弹或将持续超过一个月](https://so.toutiao.com/search?keyword=A股反弹或将持续超过一个月)
-1. [桂花表一夜翻红开启限购](https://so.toutiao.com/search?keyword=桂花表一夜翻红开启限购)
-1. [家长代表号召每家交200为老师提薪](https://so.toutiao.com/search?keyword=家长代表号召每家交200为老师提薪)
-1. [智利一女子脱光衣服大闹并攻击路人](https://so.toutiao.com/search?keyword=智利一女子脱光衣服大闹并攻击路人)
-1. [阿奇霉素和这些药混用危害大](https://so.toutiao.com/search?keyword=阿奇霉素和这些药混用危害大)
+1. [哈维尔·米莱当选阿根廷新一任总统](https://so.toutiao.com/search?keyword=哈维尔·米莱当选阿根廷新一任总统)
+1. [研究：人类最佳睡眠时长竟不是8小时](https://so.toutiao.com/search?keyword=研究：人类最佳睡眠时长竟不是8小时)
 1. [4位高中同学连续4年资助去世同学家庭](https://so.toutiao.com/search?keyword=4位高中同学连续4年资助去世同学家庭)
+1. [广西多地飞鸟盘旋是地震前兆？假的](https://so.toutiao.com/search?keyword=广西多地飞鸟盘旋是地震前兆？假的)
+1. [特朗普祝贺“阿根廷特朗普”当选总统](https://so.toutiao.com/search?keyword=特朗普祝贺“阿根廷特朗普”当选总统)
+1. [乌尔善取关封神所有演员](https://so.toutiao.com/search?keyword=乌尔善取关封神所有演员)
+1. [32个月女童疑注射阿奇霉素后死亡](https://so.toutiao.com/search?keyword=32个月女童疑注射阿奇霉素后死亡)
+1. [人民币成为全球第二大贸易融资货币](https://so.toutiao.com/search?keyword=人民币成为全球第二大贸易融资货币)
+1. [副部级官员降为科员9年后二次被查](https://so.toutiao.com/search?keyword=副部级官员降为科员9年后二次被查)
+1. [中方谈韩总统涉华言论：别指手画脚](https://so.toutiao.com/search?keyword=中方谈韩总统涉华言论：别指手画脚)
+1. [华为：海外手机暂不使用HarmonyOS](https://so.toutiao.com/search?keyword=华为：海外手机暂不使用HarmonyOS)
+1. [药物养殖的罗氏虾是狠科技吗](https://so.toutiao.com/search?keyword=药物养殖的罗氏虾是狠科技吗)
+1. [24岁演员吴迪飞宣布退圈](https://so.toutiao.com/search?keyword=24岁演员吴迪飞宣布退圈)
+1. [火箭发射拉出火焰宛如大片](https://so.toutiao.com/search?keyword=火箭发射拉出火焰宛如大片)
+1. [女子疑坠楼身亡：孩子刚出生不久](https://so.toutiao.com/search?keyword=女子疑坠楼身亡：孩子刚出生不久)
+1. [本轮巴以冲突已致387名以军阵亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致387名以军阵亡)
+1. [养儿五年发现非亲生 女方称不知情](https://so.toutiao.com/search?keyword=养儿五年发现非亲生+女方称不知情)
+1. [《我本是高山》首轮口碑](https://so.toutiao.com/search?keyword=《我本是高山》首轮口碑)
+1. [媒体：阿里改革已无退路](https://so.toutiao.com/search?keyword=媒体：阿里改革已无退路)
+1. [胡锡进谈王自如奉承董明珠事件](https://so.toutiao.com/search?keyword=胡锡进谈王自如奉承董明珠事件)
+1. [多地叫停“安全教育平台”强制打卡](https://so.toutiao.com/search?keyword=多地叫停“安全教育平台”强制打卡)
+1. [本赛季詹姆斯仅1场命中率不足50%](https://so.toutiao.com/search?keyword=本赛季詹姆斯仅1场命中率不足50%)
+1. [怀孕时器官是怎么发生“位移”的](https://so.toutiao.com/search?keyword=怀孕时器官是怎么发生“位移”的)
+1. [A股反弹或将持续超过一个月](https://so.toutiao.com/search?keyword=A股反弹或将持续超过一个月)
+1. [河南联通回应强迫用户更换光猫](https://so.toutiao.com/search?keyword=河南联通回应强迫用户更换光猫)
+1. [波音787客机首次降落南极](https://so.toutiao.com/search?keyword=波音787客机首次降落南极)
+1. [家长代表号召每家交200为老师提薪](https://so.toutiao.com/search?keyword=家长代表号召每家交200为老师提薪)
+1. [电瓶车停在黑车后面被车主一脚踹开](https://so.toutiao.com/search?keyword=电瓶车停在黑车后面被车主一脚踹开)
+1. [智利一女子脱光衣服大闹并攻击路人](https://so.toutiao.com/search?keyword=智利一女子脱光衣服大闹并攻击路人)
+1. [男婴打疫苗后离世 尸检报告已出](https://so.toutiao.com/search?keyword=男婴打疫苗后离世+尸检报告已出)
+1. [阿奇霉素和这些药混用危害大](https://so.toutiao.com/search?keyword=阿奇霉素和这些药混用危害大)
+1. [上海实业有限公司总裁周军被查](https://so.toutiao.com/search?keyword=上海实业有限公司总裁周军被查)
+1. [专家解读人民币连续暴力拉升](https://so.toutiao.com/search?keyword=专家解读人民币连续暴力拉升)
+1. [学校保卫科长醉驾致母女1死2重伤](https://so.toutiao.com/search?keyword=学校保卫科长醉驾致母女1死2重伤)
+1. [桂花表一夜翻红开启限购](https://so.toutiao.com/search?keyword=桂花表一夜翻红开启限购)
+1. [阿根廷“特朗普”当选是拉美大乱征兆吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选是拉美大乱征兆吗)
+1. [谢楠用茅台呛蟹吴京心疼](https://so.toutiao.com/search?keyword=谢楠用茅台呛蟹吴京心疼)
+1. [舅舅生气外甥女们一人亲一口哄好](https://so.toutiao.com/search?keyword=舅舅生气外甥女们一人亲一口哄好)
+1. [明天大A能向上突破吗](https://so.toutiao.com/search?keyword=明天大A能向上突破吗)
+1. [OpenAI内斗谁是赢家](https://so.toutiao.com/search?keyword=OpenAI内斗谁是赢家)
+1. [内蒙古一地审计报告难产拖欠工程款](https://so.toutiao.com/search?keyword=内蒙古一地审计报告难产拖欠工程款)
+1. [美回应阿拉伯国家会否将石油武器化](https://so.toutiao.com/search?keyword=美回应阿拉伯国家会否将石油武器化)
+1. [OpenAI新CEO：我信AI末日论](https://so.toutiao.com/search?keyword=OpenAI新CEO：我信AI末日论)
+1. [专家：柯文哲和侯友宜在玩对赌游戏](https://so.toutiao.com/search?keyword=专家：柯文哲和侯友宜在玩对赌游戏)
+1. [李强已任中央金融委员会主任](https://so.toutiao.com/search?keyword=李强已任中央金融委员会主任)
+1. [女记者采访竟遭电话轰炸和辱骂威胁](https://so.toutiao.com/search?keyword=女记者采访竟遭电话轰炸和辱骂威胁)
 1. [“白蛇传30年演唱会”发布会举行](https://so.toutiao.com/search?keyword=“白蛇传30年演唱会”发布会举行)
 1. [埃尔多安：应对以色列核武进行调查](https://so.toutiao.com/search?keyword=埃尔多安：应对以色列核武进行调查)
-1. [阿根廷“特朗普”当选是拉美大乱征兆吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选是拉美大乱征兆吗)
-1. [养儿五年发现非亲生 女方称不知情](https://so.toutiao.com/search?keyword=养儿五年发现非亲生+女方称不知情)
-1. [女子疑坠楼身亡：孩子刚出生不久](https://so.toutiao.com/search?keyword=女子疑坠楼身亡：孩子刚出生不久)
-1. [多地叫停“安全教育平台”强制打卡](https://so.toutiao.com/search?keyword=多地叫停“安全教育平台”强制打卡)
 1. [可可西里管理处回应胡歌刘涛争论](https://so.toutiao.com/search?keyword=可可西里管理处回应胡歌刘涛争论)
-1. [内蒙古一地审计报告难产拖欠工程款](https://so.toutiao.com/search?keyword=内蒙古一地审计报告难产拖欠工程款)
-1. [河南联通回应强迫用户更换光猫](https://so.toutiao.com/search?keyword=河南联通回应强迫用户更换光猫)
 1. [《新闻女王》：职场版《甄嬛传》](https://so.toutiao.com/search?keyword=《新闻女王》：职场版《甄嬛传》)
-1. [舅舅生气外甥女们一人亲一口哄好](https://so.toutiao.com/search?keyword=舅舅生气外甥女们一人亲一口哄好)
 1. [河南省通信局将约谈周口联通](https://so.toutiao.com/search?keyword=河南省通信局将约谈周口联通)
 1. [女足国脚名单分布：6位海外球员](https://so.toutiao.com/search?keyword=女足国脚名单分布：6位海外球员)
-1. [男婴打疫苗后离世 尸检报告已出](https://so.toutiao.com/search?keyword=男婴打疫苗后离世+尸检报告已出)
 1. [邱毅：蓝白合成局机会仍很大](https://so.toutiao.com/search?keyword=邱毅：蓝白合成局机会仍很大)
 1. [上海医药董事长周军辞职](https://so.toutiao.com/search?keyword=上海医药董事长周军辞职)
 1. [黑龙江一平房发生火灾致7人遇难](https://so.toutiao.com/search?keyword=黑龙江一平房发生火灾致7人遇难)
-1. [媒体：阿里改革已无退路](https://so.toutiao.com/search?keyword=媒体：阿里改革已无退路)
 1. [克林斯曼：对阵中国队力争全取3分](https://so.toutiao.com/search?keyword=克林斯曼：对阵中国队力争全取3分)
 1. [鸿蒙系统明年或不兼容安卓](https://so.toutiao.com/search?keyword=鸿蒙系统明年或不兼容安卓)
 1. [20省去年人口自然增长率为负](https://so.toutiao.com/search?keyword=20省去年人口自然增长率为负)
@@ -53,25 +74,20 @@
 1. [澳大利亚碰瓷中国海军声呐有何图谋](https://so.toutiao.com/search?keyword=澳大利亚碰瓷中国海军声呐有何图谋)
 1. [博主：独立鸿蒙生态是成功唯一路线](https://so.toutiao.com/search?keyword=博主：独立鸿蒙生态是成功唯一路线)
 1. [教育部拟同意设置5所本科高等学校](https://so.toutiao.com/search?keyword=教育部拟同意设置5所本科高等学校)
-1. [32个月女童疑注射阿奇霉素后死亡](https://so.toutiao.com/search?keyword=32个月女童疑注射阿奇霉素后死亡)
 1. [中国电商助力非洲民众奔向美好生活](https://so.toutiao.com/search?keyword=中国电商助力非洲民众奔向美好生活)
-1. [哈维尔·米莱当选阿根廷新一任总统](https://so.toutiao.com/search?keyword=哈维尔·米莱当选阿根廷新一任总统)
 1. [美批准对日出售战斧导弹 中方回应](https://so.toutiao.com/search?keyword=美批准对日出售战斧导弹+中方回应)
 1. [27岁小伙到上海求职在公园住帐篷](https://so.toutiao.com/search?keyword=27岁小伙到上海求职在公园住帐篷)
-1. [24岁演员吴迪飞宣布退圈](https://so.toutiao.com/search?keyword=24岁演员吴迪飞宣布退圈)
 1. [詹姆斯生涯第237次砍35+居历史第三](https://so.toutiao.com/search?keyword=詹姆斯生涯第237次砍35+居历史第三)
 1. [媒体人：水庆霞战术和用人难辞其咎](https://so.toutiao.com/search?keyword=媒体人：水庆霞战术和用人难辞其咎)
 1. [寿衣店开在小区外遭业主反对](https://so.toutiao.com/search?keyword=寿衣店开在小区外遭业主反对)
 1. [此次厄尔尼诺事件将持续至明春](https://so.toutiao.com/search?keyword=此次厄尔尼诺事件将持续至明春)
 1. [张琳芃即将迎来国足百场比赛](https://so.toutiao.com/search?keyword=张琳芃即将迎来国足百场比赛)
 1. [自购试剂盒测肺炎支原体可行吗](https://so.toutiao.com/search?keyword=自购试剂盒测肺炎支原体可行吗)
-1. [《我本是高山》首轮口碑](https://so.toutiao.com/search?keyword=《我本是高山》首轮口碑)
 1. [美国新一批军援抵台：含1000挺机枪](https://so.toutiao.com/search?keyword=美国新一批军援抵台：含1000挺机枪)
 1. [立讯精密：未有3.3亿美元投资决策](https://so.toutiao.com/search?keyword=立讯精密：未有3.3亿美元投资决策)
 1. [小米第三季度营收708.9亿元](https://so.toutiao.com/search?keyword=小米第三季度营收708.9亿元)
 1. [缅北明氏家族将面临怎样的法律制裁](https://so.toutiao.com/search?keyword=缅北明氏家族将面临怎样的法律制裁)
 1. [加沙南部医院运转困难孕妇面临威胁](https://so.toutiao.com/search?keyword=加沙南部医院运转困难孕妇面临威胁)
-1. [胡锡进谈王自如奉承董明珠事件](https://so.toutiao.com/search?keyword=胡锡进谈王自如奉承董明珠事件)
 1. [克林斯曼：没收到中国足协执教邀约](https://so.toutiao.com/search?keyword=克林斯曼：没收到中国足协执教邀约)
 1. [网友称全家退休金加10亩地年入4万](https://so.toutiao.com/search?keyword=网友称全家退休金加10亩地年入4万)
 1. [男乘客拍打女列车员臀部被拘10日](https://so.toutiao.com/search?keyword=男乘客拍打女列车员臀部被拘10日)
@@ -92,12 +108,10 @@
 1. [白岩松谈四川一地规定不叠被子罚款](https://so.toutiao.com/search?keyword=白岩松谈四川一地规定不叠被子罚款)
 1. [雷军点名小米品牌安全处理刻意抹黑](https://so.toutiao.com/search?keyword=雷军点名小米品牌安全处理刻意抹黑)
 1. [中韩对战在即孙兴慜训练状态引关注](https://so.toutiao.com/search?keyword=中韩对战在即孙兴慜训练状态引关注)
-1. [学校保卫科长醉驾致母女1死2重伤](https://so.toutiao.com/search?keyword=学校保卫科长醉驾致母女1死2重伤)
 1. [中美旧金山峰会给世界带来什么启示](https://so.toutiao.com/search?keyword=中美旧金山峰会给世界带来什么启示)
 1. [万事达公司获批进入我国市场](https://so.toutiao.com/search?keyword=万事达公司获批进入我国市场)
 1. [水庆霞卸任中国女足主帅](https://so.toutiao.com/search?keyword=水庆霞卸任中国女足主帅)
 1. [澳方称中国军舰声呐伤人 中方回应](https://so.toutiao.com/search?keyword=澳方称中国军舰声呐伤人+中方回应)
-1. [特朗普祝贺“阿根廷特朗普”当选总统](https://so.toutiao.com/search?keyword=特朗普祝贺“阿根廷特朗普”当选总统)
 1. [韩媒：国足防守粗糙犯规多](https://so.toutiao.com/search?keyword=韩媒：国足防守粗糙犯规多)
 1. [媒体：2024对决特朗普 拜登危矣](https://so.toutiao.com/search?keyword=媒体：2024对决特朗普+拜登危矣)
 1. [男子长期健身后食用蛋白粉查出肾虚](https://so.toutiao.com/search?keyword=男子长期健身后食用蛋白粉查出肾虚)
@@ -172,7 +186,6 @@
 1. [哈马斯公布零距离摧毁以军坦克画面](https://so.toutiao.com/search?keyword=哈马斯公布零距离摧毁以军坦克画面)
 1. [郭富城赛车场失控撞车](https://so.toutiao.com/search?keyword=郭富城赛车场失控撞车)
 1. [比亚迪：明年是新能源的大决战](https://so.toutiao.com/search?keyword=比亚迪：明年是新能源的大决战)
-1. [巴西总统卢拉：祝阿根廷新政府好运](https://so.toutiao.com/search?keyword=巴西总统卢拉：祝阿根廷新政府好运)
 1. [阿根廷新当选总统是何许人](https://so.toutiao.com/search?keyword=阿根廷新当选总统是何许人)
 1. [《甄嬛传》剧组多年后再聚首](https://so.toutiao.com/search?keyword=《甄嬛传》剧组多年后再聚首)
 1. [台州渔民出海误捕红海龟果断放生](https://so.toutiao.com/search?keyword=台州渔民出海误捕红海龟果断放生)
